--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,25 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+    <Button
+        android:id="@+id/sendData"
+        android:layout_width="348dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="307dp"
+        android:layout_marginEnd="19dp"
+        android:text="sendData"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left|bottom"
-        android:gravity="center"
-        android:background="@android:color/holo_blue_light"
-        android:text="Hello! World~"
-        android:textColor="@android:color/black"
-        android:textSize="23dp">
-        </TextView>
 </androidx.constraintlayout.widget.ConstraintLayout>
