--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -13,7 +13,7 @@
         android:text="입력하세요" />
 
     <EditText
-        android:id="@+id/date"
+        android:id="@+id/ddate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
